--- a/public/landing.html
+++ b/public/landing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -10,46 +10,46 @@
     <link rel="icon" href="../images/favicon.png" type="image/favicon" sizes="16x16">
   </head>
   <body id="landing">
-    <div class="content">
-      <div class="header flex">
-        <i class="hamburger fas fa-bars"></i>
-        <div class="menu">
+    <div class="content" role="body">
+      <div class="header flex" role="header" label="The Custom Cakery">
+        <i class="hamburger fas fa-bars" role="navigation-button" tabindex="1"></i>
+        <div class="menu" label="menu">
           <div class="links">
             <h5>MENU</h5>
-            <a href="landing.html">&bull; Home</a>
-            <a href="order.html">&bull; Order a Cake</a>
-            <a href="gallery.html">&bull; The Gallery</a>
-          </div>
-          <img class="cake-review" src="../images/cake_review.png">
+            <a href="landing.html" tabindex="2" aria-label="home page link">&bull; Home</a>
+            <a href="order.html" tabindex="3" aria-label="order link">&bull; Order a Cake</a>
+            <a href="gallery.html" tabindex="4" aria-label="gallery link">&bull; The Gallery</a>
+          </div aria-label="csutomer review image">
+          <img class="cake-review" src="../images/cake_review.png" alt="beautiful and delicious cakes! -a satisfied customer <3">
         </div>
-        <i class="close fas fa-times"></i>     
+        <i class="close fas fa-times" aria-label="close menu" tabindex="5"></i>
         <a href="landing.html">
           <h2 class="logo"><img src="../images/cake_logo.png"></h2>
         </a>
       </div>
       <div class="flex">
         <div>
-          <img class="medium-image landing-image" src="../images/sprinkle_cake.jpeg">
+          <img class="medium-image landing-image" tabindex="6" src="../images/sprinkle_cake.jpeg" label="Click the cake to see more of out delicious cake">
           <div class="margin-top--small medium-image-text"><img src="../images/cake_text.png"></div>
         </div>
         <div class="description-text">
           <div>🎂🎂🎂🎂🎂🎂🎂🎂🎂🎂🎂</div>
-          <p>
+          <p tabindex="7">
             Welcome to The Custom Cakery! We are an entirely custom cake making business, and would love to take on any cake challenge! Our cakes are inspired by many things, including: fresh flowers, winter mountain scenes, a long walk on the beach, spending time with our friends and family, modern art galleries, heavy metal concerts, scuba diving in the carribbean, the smell of rain, our favorite novels, and of course YOU! We would love to create that custom cake of your dreams, just for fun, or for a special event and / or person in your life! These events may include: birthdays, weddings, funerals, get togethers, reunions, band practice, halloween, national chocolate cake day, births, your cat's birthday, quitting a job, apologizing to a friend or acquaintance and more!!!!!
           </p>
-          <div>Click <a href="order.html">here</a> to order a cake today, or check out our awesome <a href="gallery.html">gallery!</a></div>
+          <div tabindex="8">Click <a href="order.html">here</a> to order a cake today, or check out our awesome <a href="gallery.html">gallery!</a></div>
           <p>WE ALSO MAKE CUPCAKES!!!</p>
           <div>🎂🎂🎂🎂🎂🎂🎂🎂🎂🎂🎂</div>
-        </div>       
+        </div>
       </div>
     </div>
     <div class="footer">
-      <div>Contact Us On Social Media OR By Calling 555 - 555 - 5555</div>
-      <div>
-        <a href=""><i class="fab fa-instagram"></i></a>
-        <a href=""><i class="fab fa-facebook-square"></i></a>
-        <a href=""><i class="fas fa-envelope-open"></i></a>
-        <a href=""><i class="fab fa-twitter"></i></a>
+      <div role="contact" aria-label="Contact Us On Social Media OR By Calling 555 - 555 - 5555">Contact Us On Social Media OR By Calling 555 - 555 - 5555</div>
+      <div role="share-links">
+        <a href=""><i class="fab fa-instagram" aria-label="instagram" tabindex="9"></i></a>
+        <a href=""><i class="fab fa-facebook-square" aria-label="facebook" tabindex="10"></i></a>
+        <a href=""><i class="fas fa-envelope-open" aria-label="email" tabindex=11></i></a>
+        <a href=""><i class="fab fa-twitter" aria-label="twitter" tabindex="12"></i></a>
       </div>
     </div>
     <script type="text/javascript" src="../main.js"></script>
