Modification to the order.html

--- a/public/landing.html
+++ b/public/landing.html
@@ -11,7 +11,7 @@
   </head>
   <body id="landing">
     <div class="content" role="body">
-      <div class="header flex" role="header" label="The Custom Cakery">
+      <header class="header flex" label="The Custom Cakery">
         <i class="hamburger fas fa-bars" role="navigation-button" tabindex="1"></i>
         <div class="menu" label="menu">
           <div class="links">
@@ -26,7 +26,7 @@
         <a href="landing.html">
           <h2 class="logo"><img src="../images/cake_logo.png"></h2>
         </a>
-      </div>
+      </header>
       <div class="flex">
         <div>
           <img class="medium-image landing-image" tabindex="6" src="../images/sprinkle_cake.jpeg" label="Click the cake to see more of out delicious cake">
