Add additional label for landing and order html

--- a/public/order.html
+++ b/public/order.html
@@ -12,28 +12,28 @@
   <body id ="order">
     <div class="modal">
       <i class="modal-close fas fa-times"></i>
-      <div class="modal-content">
+      <section class="modal-content">
        <h3>Want to Save 10% on Your First Cake Purchase?! Enter your email here, and join the cake club!</h3>
-        <div class="input">
+        <div class="input" role="input">
           <input class="modal-email-field" type="text" >
         </div>
-        <div>
+        <div role="button">
           <button class="margin-top--small modal-button">JOIN THE CAKE CLUB!</button>
         </div>
-      </div>
+      </section>
     </div>
-    <div class="content order">
+    <section class="content order">
       <div class="header flex">
         <i class="hamburger fas fa-bars"></i>
-        <div class="menu">
-          <div class="links">
+        <section class="menu">
+          <nav class="links">
             <h5>MENU</h5>
             <a href="landing.html">&bull; Home</a>
             <a href="order.html">&bull; Order a Cake</a>
             <a href="gallery.html">&bull; The Gallery</a>
-          </div>
+          </nav>
           <img class="cake-review" src="../images/cake_review.png">
-        </div>
+        </section>
         <i class="close fas fa-times"></i>
         <a href="landing.html">
           <h2 class="logo"><img src="../images/cake_logo.png"></h2>
@@ -92,27 +92,27 @@
           <option value="40-50">40 - 50</option>
           <option value="50+">50+</option>
         </select>
-        <div>
+        <section name="provide-other-details">
           <textarea name="" id="" cols="30" rows="10">Please Provide Details if Selected "Other" Anywhere on Form</textarea>
-        </div>
-        <div>Desired Pickup Date <br>(*note this is desired only and is not a confirmation, we will email you with details or
-          contact you if more information is required regarding your cake.</div>
+        </section>
+        <section class="pick-up-date">Desired Pickup Date <br>(*note this is desired only and is not a confirmation, we will email you with details or
+          contact you if more information is required regarding your cake.</section>
         <input required type="number">
-        <div>
-          <button type="submit" class="form-submit">Submit Form</button>
-        </div>
+        <section>
+          <button type="submit" role="submit" class="form-submit">Submit Form</button>
+        </section>
         <div class="subtext margin-top--small">All fields required!</div>
       </form>
-    </div>
-    <div class="footer">
-      <div>Contact Us</div>
-      <div>
+    </section>
+    <footer class="footer">
+      <div class="contact-us-title">Contact Us</div>
+      <section>
         <a href=""><i class="fab fa-instagram"></i></a>
         <a href=""><i class="fab fa-facebook-square"></i></a>
         <a href=""><i class="fas fa-envelope-open"></i></a>
         <a href=""><i class="fab fa-twitter"></i></a>
-      </div>
-    </div>
+      </section>
+    </footer>
   <script type="text/javascript" src="../main.js"></script>
   </body>
 </html>
