Add alt tags on dessert images

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -10,85 +10,83 @@
     <link rel="icon" href="../images/favicon.png" type="image/favicon" sizes="16x16">
   </head>
   <body id="gallery">
-    <div class="content">
-      <div class="header flex">
-        <i class="hamburger fas fa-bars"></i>
-        <div class="menu">
-          <div class="links">
-            <h5>MENU</h5>
-            <a href="landing.html">&bull; Home</a>
-            <a href="order.html">&bull; Order a Cake</a>
-            <a href="gallery.html">&bull; The Gallery</a>
-          </div>
-          <img class="cake-review" src="../images/cake_review.png">
-        </div>
-        <i class="close fas fa-times"></i>
-        <a href="landing.html">
-          <h2 class="logo"><img src="../images/cake_logo.png"></h2>
-        </a>
+    <header class="header flex">
+      <i class="hamburger fas fa-bars"></i>
+      <div class="menu">
+        <nav class="links">
+          <h5>MENU</h5>
+          <a href="landing.html">&bull; Home</a>
+          <a href="order.html">&bull; Order a Cake</a>
+          <a href="gallery.html">&bull; The Gallery</a>
+        </nav>
+        <img class="cake-review" src="../images/cake_review.png">
       </div>
-      <h4>CHECK OUT OUR CAKES!</h4>
-      <div class="gallery-wrapper">
-        <div class="gallery-item">
-          <img src="../images/01.jpg">
-          <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
-        </div>
-        <div class="gallery-item">
-          <img src="../images/02.jpg">
-          <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
-        </div>
-        <div class="gallery-item">
-          <img src="../images/03.jpg">
-          <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
-        </div>
-        <div class="gallery-item">
-          <img src="../images/04.jpg">
-          <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
-        </div>
-        <div class="gallery-item">
-          <img src="../images/05.jpg" >
-          <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
-        </div>
-        <div class="gallery-item">
-          <img src="../images/06.jpg">
-          <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
-        </div>
-        <div class="gallery-item">
-          <img src="../images/07.jpg">
-          <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
-        </div>
-        <div class="gallery-item">
-          <img src="../images/08.jpg">
-          <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
-        </div>
-        <div class="gallery-item">
-          <img src="../images/09.jpg">
-          <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
-        </div>
-        <div class="gallery-item">
-          <img src="../images/10.jpg">
-          <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
-        </div>
-        <div class="gallery-item">
-          <img src="../images/11.jpg">
-          <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
-        </div>
-        <div class="gallery-item">
-          <img src="../images/12.jpg">
-          <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
-        </div>
+      <i class="close fas fa-times"></i>
+      <a href="landing.html">
+        <h2 class="logo"><img src="../images/cake_logo.png"></h2>
+      </a>
+    </header>
+    <h4>CHECK OUT OUR CAKES!</h4>
+    <section class="gallery-wrapper">
+      <div class="gallery-item">
+        <img src="../images/01.jpg" alt="chocolate icing on top of cupcake">
+        <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
       </div>
-      <h1>"I ate a cereal cupcake from The Custom Cakery and it was LITERALLY the best thing I've ever eaten." - yet another satisfied customer</h1>
-    </div>
-    <div class="footer">
+      <div class="gallery-item">
+        <img src="../images/02.jpg" alt="square tiramusu">
+        <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+      </div>
+      <div class="gallery-item">
+        <img src="../images/03.jpg" alt="purple icing on cupcake with birthday candle on top">
+        <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+      </div>
+      <div class="gallery-item">
+        <img src="../images/04.jpg" alt="slice of chocolate cake">
+        <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+      </div>
+      <div class="gallery-item">
+        <img src="../images/05.jpg" alt="cupcake with lots of colored sprinkles">
+        <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+      </div>
+      <div class="gallery-item">
+        <img src="../images/06.jpg" alt="whole round cake with unicorn cutout on top">
+        <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+      </div>
+      <div class="gallery-item">
+        <img src="../images/07.jpg" alt="round cake, white icing, rashberry on top">
+        <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+      </div>
+      <div class="gallery-item">
+        <img src="../images/08.jpg" alt="catus theme cake with sparklers on top">
+        <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+      </div>
+      <div class="gallery-item">
+        <img src="../images/09.jpg" alt="white cupcake, purple frosting, and rainbow candy on top">
+        <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+      </div>
+      <div class="gallery-item">
+        <img src="../images/10.jpg" alt="chocolcate cupcake with white icing on top">
+        <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+      </div>
+      <div class="gallery-item">
+        <img src="../images/11.jpg" alt="chocolate lover's cake with lots of chocolate icing">
+        <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+      </div>
+      <div class="gallery-item">
+        <img src="../images/12.jpg" alt="chococalte cupcake with shreaded chocolate on top">
+        <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
+      </div>
+    </section>
+    <h1>"I ate a cereal cupcake from The Custom Cakery and it was LITERALLY the best thing I've ever eaten." - yet another satisfied customer</h1>
+    <footer class="footer">
       <div>Contact Us</div>
-      <div>
+      <section>
         <a href=""><i class="fab fa-instagram"></i></a>
         <a href=""><i class="fab fa-facebook-square"></i></a>
         <a href=""><i class="fas fa-envelope-open"></i></a>
         <a href=""><i class="fab fa-twitter"></i></a>
-      </div>
-    </div>
+      </section>
+    </footer>
     <script type="text/javascript" src="../main.js"></script>
   </body>
 </html>
