Add role to images

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -29,51 +29,51 @@
     <h4>CHECK OUT OUR CAKES!</h4>
     <section class="gallery-wrapper">
       <div class="gallery-item">
-        <img src="../images/01.jpg" alt="chocolate icing on top of cupcake">
+        <img role="image" src="../images/01.jpg" alt="chocolate icing on top of cupcake">
         <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
       </div>
       <div class="gallery-item">
-        <img src="../images/02.jpg" alt="square tiramusu">
+        <img role="image" src="../images/02.jpg" alt="square tiramusu">
         <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
       </div>
       <div class="gallery-item">
-        <img src="../images/03.jpg" alt="purple icing on cupcake with birthday candle on top">
+        <img role="image" src="../images/03.jpg" alt="purple icing on cupcake with birthday candle on top">
         <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
       </div>
       <div class="gallery-item">
-        <img src="../images/04.jpg" alt="slice of chocolate cake">
+        <img role="image" src="../images/04.jpg" alt="slice of chocolate cake">
         <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
       </div>
       <div class="gallery-item">
-        <img src="../images/05.jpg" alt="cupcake with lots of colored sprinkles">
+        <img role="image" src="../images/05.jpg" alt="cupcake with lots of colored sprinkles">
         <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
       </div>
       <div class="gallery-item">
-        <img src="../images/06.jpg" alt="whole round cake with unicorn cutout on top">
+        <img role="image" src="../images/06.jpg" alt="whole round cake with unicorn cutout on top">
         <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
       </div>
       <div class="gallery-item">
-        <img src="../images/07.jpg" alt="round cake, white icing, rashberry on top">
+        <img role="image" src="../images/07.jpg" alt="round cake, white icing, rashberry on top">
         <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
       </div>
       <div class="gallery-item">
-        <img src="../images/08.jpg" alt="catus theme cake with sparklers on top">
+        <img role="image" src="../images/08.jpg" alt="catus theme cake with sparklers on top">
         <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
       </div>
       <div class="gallery-item">
-        <img src="../images/09.jpg" alt="white cupcake, purple frosting, and rainbow candy on top">
+        <img role="image" src="../images/09.jpg" alt="white cupcake, purple frosting, and rainbow candy on top">
         <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
       </div>
       <div class="gallery-item">
-        <img src="../images/10.jpg" alt="chocolcate cupcake with white icing on top">
+        <img role="image" src="../images/10.jpg" alt="chocolcate cupcake with white icing on top">
         <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
       </div>
       <div class="gallery-item">
-        <img src="../images/11.jpg" alt="chocolate lover's cake with lots of chocolate icing">
+        <img role="image" src="../images/11.jpg" alt="chocolate lover's cake with lots of chocolate icing">
         <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
       </div>
       <div class="gallery-item">
-        <img src="../images/12.jpg" alt="chococalte cupcake with shreaded chocolate on top">
+        <img role="image" src="../images/12.jpg" alt="chococalte cupcake with shreaded chocolate on top">
         <button class="gallery-btn"><a href="order.html">ORDER THIS CAKE</a></button>
       </div>
     </section>
