Change footer background color

--- a/public/gallery.html
+++ b/public/gallery.html
@@ -79,7 +79,7 @@
     </section>
     <h1>"I ate a cereal cupcake from The Custom Cakery and it was LITERALLY the best thing I've ever eaten." - yet another satisfied customer</h1>
     <footer class="footer">
-      <div>Contact Us</div>
+      <div role="title" class="footer-header">Contact Us</div>
       <section>
         <a href=""><i class="fab fa-instagram"></i></a>
         <a href=""><i class="fab fa-facebook-square"></i></a>
