--- a/public/landing.html
+++ b/public/landing.html
@@ -42,7 +42,7 @@
       </section>
     </section>
     <footer class="footer">
-      <div role="contact" aria-label="Contact Us On Social Media OR By Calling 555 - 555 - 5555">Contact Us On Social Media OR By Calling 555 - 555 - 5555</div>
+      <div role="title" class="footer-header" aria-label="Contact Us On Social Media OR By Calling 555 - 555 - 5555">Contact Us On Social Media OR By Calling 555 - 555 - 5555</div>
       <section role="share-links">
         <a href=""><i class="fab fa-instagram" aria-label="instagram" tabindex="9"></i></a>
         <a href=""><i class="fab fa-facebook-square" aria-label="facebook" tabindex="10"></i></a>
