--- a/public/order.html
+++ b/public/order.html
@@ -105,7 +105,7 @@
       </form>
     </section>
     <footer class="footer">
-      <div class="contact-us-title">Contact Us</div>
+      <div role="title" class="footer-header" class="contact-us-title">Contact Us</div>
       <section>
         <a href=""><i class="fab fa-instagram"></i></a>
         <a href=""><i class="fab fa-facebook-square"></i></a>
