--- a/public/order.html
+++ b/public/order.html
@@ -48,41 +48,41 @@
           <input id="email" required type="text">
         <div label="phone-number">Phone Number:</div>
           <input id="phone-number" required type="number">
-        <section role="tablist" aria-label="Desired Cake Tabs">Desired Cake</section>
-          <input type="radio" name="cake" aria-selected="true" aria-controls="panel-1" role="tab" id="whole-cake-tab" checked>Whole Cake
-          <input type="radio" name="cake" aria-selected="false" aria-controls="panel-2" role="tab" id="half-cake-tab">1/2 Dozen Cupcakes
-          <input type="radio" name="cake" aria-selected="false" aria-controls="panel-3" role="tab" id="dozen-cupcakes-tab">1 Dozen Cupcakes
-          <input type="radio" name="cake" aria-selected="false" aria-controls="panel-4" role="tab" id="other-cake-tab">Other
-        <section role="tablist" aria-label="Cake Shape Tabs">Cake Shape (excludes cupcakes)</section>
-          <input type="radio" name="shape" aria-selected="false" aria-controls="panel-1" role="tab" id="circle-cake-tab">Circle
-          <input type="radio" name="shape" aria-selected="false" aria-controls="panel-2" role="tab" id="square-cake-tab">Square
-          <input type="radio" name="shape" aria-selected="false" aria-controls="panel-3" role="tab" id="rectangle-cake-tab">Rectangle
-          <input type="radio" name="shape" aria-selected="true" aria-controls="panel-4" role="tab" id="other-cake-shape-tab"checked>Other
-        <section role="tablist" aria-label="Cake Writing Tabs">Do You Want Writing?</section>
-          <input type="radio" name="words" aria-selected="true" aria-controls="panel-1" role="tab" id="yes-writing-tab" checked>Yes
-          <input type="radio" name="words" aria-selected="false" aria-controls="panel-2" role="tab" id="no-writing-tab">No
+        <section role="tablist" label="Desired Cake Tabs">Desired Cake</section>
+          <input type="radio" name="cake" aria-selected="true" role="tab" id="whole-cake-tab" checked>Whole Cake
+          <input type="radio" name="cake" aria-selected="false" role="tab" id="half-cake-tab">1/2 Dozen Cupcakes
+          <input type="radio" name="cake" aria-selected="false" role="tab" id="dozen-cupcakes-tab">1 Dozen Cupcakes
+          <input type="radio" name="cake" aria-selected="false" role="tab" id="other-cake-tab">Other
+        <section role="tablist" label="Cake Shape Tabs">Cake Shape (excludes cupcakes)</section>
+          <input type="radio" name="shape" aria-selected="false" role="tab" id="circle-cake-tab">Circle
+          <input type="radio" name="shape" aria-selected="false" role="tab" id="square-cake-tab">Square
+          <input type="radio" name="shape" aria-selected="false" role="tab" id="rectangle-cake-tab">Rectangle
+          <input type="radio" name="shape" aria-selected="true" role="tab" id="other-cake-shape-tab"checked>Other
+        <section role="tablist" label="Cake Writing Tabs">Do You Want Writing?</section>
+          <input type="radio" name="words" aria-selected="true" role="tab" id="yes-writing-tab" checked>Yes
+          <input type="radio" name="words" aria-selected="false" role="tab" id="no-writing-tab">No
         <section>If you selected "writing," please indicate text here: </section>
           <input type="text" id="cake-text" placeholder="cake text">
-        <section role="tablist" aria-label="Flavor Tabs">Flavor(s)</section>
-          <input type="checkbox" aria-selected="true" aria-controls="panel-1" role="tab" id="chocloate-flavor-tab" checked value="chocolate">Chocolate
-          <input type="checkbox" aria-selected="true" aria-controls="panel-2" role="tab" id="vanilla-flavor-tab" checked value="vanilla">Vanilla
-          <input type="checkbox" aria-selected="true" aria-controls="panel-3" role="tab" id="fruit-flavor-tab" checked value="fruit">Fruit
-          <input type="checkbox" aria-selected="true" aria-controls="panel-4" role="tab" id="other-flavor-tab" checked value="other">Other
-        <section role="tablist" aria-label="Filling Tabs">Filling(s)</section>
-          <input type="checkbox" aria-selected="true" aria-controls="panel-1" role="tab" id="vanilla-filling-tab" checked value="vanilla">Vanilla
-          <input type="checkbox" aria-selected="true" aria-controls="panel-2" role="tab" id="chocloate-filling-tab" checked value="chocolate">Chocolate
-          <input type="checkbox" aria-selected="true" aria-controls="panel-3" role="tab" id="fruit-filling-tab" checked value="fruit">Fruit
-          <input type="checkbox" aria-selected="true" aria-controls="panel-4" role="tab" id="other-filling-tab" checked value="other">Other
-        <section role="tablist" aria-label="Frosting Tabs">Frosting(s)</section>
-          <input type="checkbox" aria-selected="true" aria-controls="panel-1" role="tab" id="fruit-frosting-tab" checked value="fruit">Fruit
-          <input type="checkbox" aria-selected="true" aria-controls="panel-2" role="tab" id="chocloate-frosting-tab" checked value="chocolate">Chocolate
-          <input type="checkbox" aria-selected="true" aria-controls="panel-3" role="tab" id="vinilla-frosting-tab" checked value="vanilla">Vanilla
-          <input type="checkbox" aria-selected="true" aria-controls="panel-4" role="tab" id="other-frosting-tab" checked value="other">Other
-        <section role="tablist" aria-label="Topping Tabs">Topping(s)</section>
-          <input type="checkbox" aria-selected="true" aria-controls="panel-1" role="tab" id="chocloate-topping-tab" checked value="chocolate">Chocolate Shavings
-          <input type="checkbox" aria-selected="true" aria-controls="panel-1" role="tab" id="vanilla-topping-tab" checked value="vanilla">Sprinkles
-          <input type="checkbox" aria-selected="true" aria-controls="panel-1" role="tab" id="fruit-topping-tab" checked value="fruit">Fruit
-          <input type="checkbox" aria-selected="true" aria-controls="panel-1" role="tab" id="other-topping-tab" checked value="other">Other
+        <section role="tablist" label="Flavor Tabs">Flavor(s)</section>
+          <input type="checkbox" aria-selected="true" role="tab" id="chocloate-flavor-tab" checked value="chocolate">Chocolate
+          <input type="checkbox" aria-selected="true" role="tab" id="vanilla-flavor-tab" checked value="vanilla">Vanilla
+          <input type="checkbox" aria-selected="true" role="tab" id="fruit-flavor-tab" checked value="fruit">Fruit
+          <input type="checkbox" aria-selected="true" role="tab" id="other-flavor-tab" checked value="other">Other
+        <section role="tablist" label="Filling Tabs">Filling(s)</section>
+          <input type="checkbox" aria-selected="true" role="tab" id="vanilla-filling-tab" checked value="vanilla">Vanilla
+          <input type="checkbox" aria-selected="true" role="tab" id="chocloate-filling-tab" checked value="chocolate">Chocolate
+          <input type="checkbox" aria-selected="true" role="tab" id="fruit-filling-tab" checked value="fruit">Fruit
+          <input type="checkbox" aria-selected="true" role="tab" id="other-filling-tab" checked value="other">Other
+        <section role="tablist" label="Frosting Tabs">Frosting(s)</section>
+          <input type="checkbox" aria-selected="true" role="tab" id="fruit-frosting-tab" checked value="fruit">Fruit
+          <input type="checkbox" aria-selected="true" role="tab" id="chocloate-frosting-tab" checked value="chocolate">Chocolate
+          <input type="checkbox" aria-selected="true" role="tab" id="vinilla-frosting-tab" checked value="vanilla">Vanilla
+          <input type="checkbox" aria-selected="true" role="tab" id="other-frosting-tab" checked value="other">Other
+        <section role="tablist" label="Topping Tabs">Topping(s)</section>
+          <input type="checkbox" aria-selected="true" role="tab" id="chocloate-topping-tab" checked value="chocolate">Chocolate Shavings
+          <input type="checkbox" aria-selected="true" role="tab" id="vanilla-topping-tab" checked value="vanilla">Sprinkles
+          <input type="checkbox" aria-selected="true" role="tab" id="fruit-topping-tab" checked value="fruit">Fruit
+          <input type="checkbox" aria-selected="true" role="tab" id="other-topping-tab" checked value="other">Other
         <section>Approx. How Many People Should Cake Feed?</section>
         <select name="" id="">
           <option value="1-10">1 - 10</option>
